      behavior in 1.20.x. Prompted by Johannes Schauer <josch@debian.org>.
    - Mark ppc64 as having gcc builtin PIE in Dpkg::Vendor::Debian.
    - Make the Dpkg::Substvars warnings output deterministic.
      Thanks to Chris Lamb <lamby@debian.org>. Closes: #870221
    - Remove unused POSIX module imports.
    - Use Errno module instead of the slow to import POSIX.
  * Documentation:
    - Document currently accepted syntax for changelogs in deb-changelog(5).
      Closes: #858579
    - Mark source:Version substvar in bold in deb-substvars(5).
    - Clarify behavior for dpkg-maintscript-helper. Closes: #857852
    - Use <command-string> instead of <command> for -c argument value in
      dpkg-architecture(1). Reported by Johannes Schauer <josch@debian.org>.
    - Itemize the CTRL_* constants in the Dpkg::Index POD.
    - Update buildinfo information in dpkg-buildpackage man page to match
      the current implementation.
    - Add all source files to POTFILES.in files.
    - Move deb-version man page to section 7.
    - Remove reference to obsolete dpkg-cross(1).
    - Sort control field export markers by tool order in deb-src-control(5).
    - Document Package-Type and Enhances fields in deb-control(5).
    - Write the actual glyphs used to delimit dependency restrictions in
      deb-src-control(5).
    - Move Package-Type description just after the Package field in
      deb-src-control(5).
    - Move udeb-specific fields to the end of the list of fields in
      deb-src-control(5), and mention these are really udeb-specific.
    - Document that dependency fields in binary stanza can have restrictions
      in deb-src-control(5).
    - Clarify that the Testsuite field is comma-separarted.
    - Fix update-alternatives man page section in alternatives/README file
      reference. Closes: #872309
  * Code internals:
    - Switch perl code to use -> operator for function variables.
  * Build system: