@@ -23,6 +23,8 @@ dpkg (1.19.0) UNRELEASED; urgency=medium
       Thanks to Chris Lamb <lamby@debian.org>. Closes: #870221
     - Remove unused POSIX module imports.
     - Use Errno module instead of the slow to import POSIX.
+    - Only load POSIX from Dpkg::Compression::FileHandle if we are going to
+      use signal definitions, reducing the load time of many other modules.
   * Documentation:
     - Document currently accepted syntax for changelogs in deb-changelog(5).
       Closes: #858579
